# pal-server-cli

./: .gitattributes  .gitignore  Cargo.toml  config.toml.example
pal-server-cli/: Cargo.toml
pal-server-cli/src/: cvm_utils.rs  local_storage.rs  main.rs  psm.rs  server_status.rs
scripts/: backup_save.sh  start_server.sh
tencent-cloud-sdk/: Cargo.toml
tencent-cloud-sdk/src/: config.rs  constant.rs  lib.rs
tencent-cloud-sdk/src/client/: constant.rs  mod.rs  signature.rs
tencent-cloud-sdk/src/client/cvm/: cvm_instance.rs  cvm_key.rs  cvm_security_group.rs  cvm_zone.rs  mod.rs
tencent-cloud-sdk/src/client/lighthouse/: lighthouse_firewall.rs  mod.rs
