[workspace]
resolver = "3"
members = ["pal-server-cli", "tencent-cloud-sdk"]

[workspace.package]
authors = ["eluvk.dev@gmail.com"]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["full"] }
