[package]
name = "pal-server-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
opendal = { version = "0.55.0", default-features = false, features = [
    "services-sftp",
    "services-fs",
    "layers-tracing",
] }
serde_json.workspace = true
serde.workspace = true
tencent-cloud-sdk = { path = "../tencent-cloud-sdk" }
tokio.workspace = true
toml.workspace = true
